sua lai theo feedback lan 2

--- a/src/components/achievement/Achievement.scss
+++ b/src/components/achievement/Achievement.scss
@@ -60,6 +60,7 @@
             font-family: $defaultFont;
             color: #fff;
             text-align: justify;
+            margin-top: 18px;
 
             @include mobile{
                 font-size: $fontSizeMobile;
