--- a/src/components/achievement/Achievement.scss
+++ b/src/components/achievement/Achievement.scss
@@ -4,7 +4,7 @@
 
 .wrapper{
     position: relative;
-    top: 76px;
+    // top: 76px;
     height: 635px;
 
     @include mobile{
@@ -18,6 +18,7 @@
 
         @include mobile{
             height: 230px;
+            margin-top: 70px;
         }
     }
 }
@@ -29,19 +30,19 @@
     transform: translateX(-50%) translateY(-120%);
 
     @include mobile{
-        width: 320px;
+        width: 300px;
         transform: translateX(-50%) translateY(-70px);
     }
 }
 
 .achieve-wrapper{
-    margin-top: 76px;
+    // margin-top: 76px;
     padding: 40px;
     background-color: $primary;
 
     @include mobile{
         padding: 20px;
-        margin-top: -14px;
+        margin-top: -90px;
     }
 
     .achieve-row{
@@ -83,6 +84,31 @@
             margin: 20px 0 50px;
 
             .paper-col{
+                @include mobile{
+                    width: 50%;
+                   
+                }
+
+                .paper-txt1{
+                    color: #fff;
+                    text-align: center;
+                    opacity: 0.8;
+                    font-size: 30px;
+                }
+
+                .paper-txt2{
+                    color: #fff;
+                    text-align: center;
+                    font-size: 80px;
+                    font-family: 'Handjet', cursive;
+                }
+            }
+
+            .paper-col-sum{
+                @include mobile{
+                    width: 100%;
+                }
+
                 .paper-txt1{
                     color: #fff;
                     text-align: center;
