--- a/src/components/achievement/paper/Paper.scss
+++ b/src/components/achievement/paper/Paper.scss
@@ -4,15 +4,16 @@
 .paper-wrapper{
     background-color: $primary;
     padding: 40px;
-    margin-top: 77px;
+    // margin-top: 77px;
 
     @include mobile{
         padding: 10px;
-        margin-top: 70px;
+        // margin-top: 70px;
     }
 
     .paper-row{
         padding: 20px;
+        margin-top: 40px;
 
         @include tablet{
             border-bottom: 1px solid #fff;
@@ -33,11 +34,11 @@
 
             .paper-title{
                 font-family: $defaultFont;
-                font-weight: 400;
+                font-weight: bold;
                 font-size: 20px;
                 color: #fff;
                 margin: 0;
-                text-align: justify;
+                text-align: left;
             }
 
             .paper-author{
@@ -60,9 +61,30 @@
 
             .paper-contest{
                 font-family: $defaultFont;
-                font-weight: bold;
+                font-weight: 400;
                 color: #fff;
                 margin-top: 10px;
+            }
+
+            .btnCode{
+                background-color: #A765FA;
+                border: none;
+                border-radius: 5px;
+                float: right;
+                margin-top: 5px;
+
+                &:hover .btnCode-txt{
+                    color: #000;
+                }
+
+                .fa-github{
+                    color: #fff;
+                }
+
+                .btnCode-txt{
+                    color: #fff;
+                    padding: 5px;
+                }
             }
         }
 
