--- a/src/components/home/Home.scss
+++ b/src/components/home/Home.scss
@@ -2,7 +2,7 @@
 @import '../globalStyle//mixin';
 
 .home-wrapper{
-    margin-top: 75px;
+    // margin-top: 75px;
     position: relative;
     width: 100%;
     height: 650px;
@@ -10,7 +10,7 @@
     overflow: hidden;
 
     @include mobile{
-        margin-top: 70px;
+        // margin-top: 70px;
         height: 286px;
     }
 }
@@ -23,7 +23,7 @@
 
     @include mobile{
         width: 320px;
-        transform: translateY(-15px) translateX(-50%);
+        transform: translateY(300px) translateX(-50%);
     }
 }
 
@@ -57,7 +57,7 @@
         font-size: 18px;
         width: 82%;
         top: 40%;
-        transform: translateX(-50%) translateY(16px) scale(1) translateZ(0px);
+        transform: translateX(-50%) translateY(40px) scale(1) translateZ(0px);
     }
 }
 
