--- a/src/components/event/Event.scss
+++ b/src/components/event/Event.scss
@@ -121,6 +121,11 @@
 }
 
 
+.achieve-wrapper {
+    min-height: calc(100vh - 180px);
+}
+
+
 // .wrapper{
 //     position: relative;
 //     top: 90px;
