--- a/src/components/member/Member.scss
+++ b/src/components/member/Member.scss
@@ -128,6 +128,7 @@
         margin: 30px 12%;
         object-fit: cover;
         border-radius: 1rem;
+        min-height:400px;
         @include tablet{
             margin: 30px 0;
         }
